--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,7 @@
             "email": "shubham@fininfocom.com"
         }
     ],
-    "require": {}
+    "require-dev": {
+        "kint-php/kint": "^4.1"
+    }
 }
